# zeroclaw-scoring

./: CLAUDE.md  MISTAKES.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer.md  reviewer.md
.claude/commands/: execute.md  mistake.md  plan.md  review.md  spec.md
tests/: test_scorer.py
zeroclaw_scoring/: __init__.py  degradation.py  digest.py  scorer.py  tiers.py  types.py
