[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zeroclaw-scoring"
version = "1.0.0"
description = "Zeroclaw Operator Scoring Module — oracle-verified trust tier ranking"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
